Baked normal artifacts #46217

Closed
opened 2015-09-23 02:12:33 +02:00 by Julio Iglesias · 9 comments

System Information
W10, GF630M

Blender Version
Broken: 2.76.1 (034cc85)
Worked: 2.75

Short description of error
Baked normals feature artifacts:
bnormalsissue.jpg

Exact steps for others to reproduce the error
Just open and bake, then compare with the result with 2.75.
P.S.: Didn't apply subdiv modifier to keep the blend small, but the effect is still noticeable.
normal_test.blend

**System Information** W10, GF630M **Blender Version** Broken: 2.76.1 (034cc85) Worked: 2.75 **Short description of error** Baked normals feature artifacts: ![bnormalsissue.jpg](https://archive.blender.org/developer/F237547/bnormalsissue.jpg) **Exact steps for others to reproduce the error** Just open and bake, then compare with the result with 2.75. P.S.: Didn't apply subdiv modifier to keep the blend small, but the effect is still noticeable. [normal_test.blend](https://archive.blender.org/developer/F237549/normal_test.blend)
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @Zafio

Added subscriber: @Zafio

Added subscriber: @Harvester

Added subscriber: @Harvester

I can confirm the same issue here too on Win7 Pro 64bit, Blender 2.76 RC1 64bit (Hash: c586e30). Version 2.75a official (Hash: c27589e) 64bit works as expected.

I can confirm the same issue here too on Win7 Pro 64bit, Blender 2.76 RC1 64bit (Hash: c586e30). Version 2.75a official (Hash: c27589e) 64bit works as expected.

Added subscriber: @ideasman42

Added subscriber: @ideasman42

Caused by: 2ec00ea0c1

This commit makes Blender use triangles for tangent calculation.
Note that there were some fixes made after this commit too. which further change how tangents are calculated.

We need to check if using triangles to calculate tangents is the cause, or if its some other error.
Note that in other tests this code didn't give noticeable problems with tangents, so it could be an artifact thats more noticeable in this particular example.

Caused by: 2ec00ea0c1 This commit makes Blender use triangles for tangent calculation. Note that there were some fixes made after this commit too. which further change how tangents are calculated. We need to check if using triangles to calculate tangents is the cause, or if its some other error. Note that in other tests this code didn't give noticeable problems with tangents, so it could be an artifact thats more noticeable in this particular example.

Added subscriber: @Sergey

Added subscriber: @Sergey

This issue was referenced by abfc9e59e2

This issue was referenced by abfc9e59e251e77533569135a14d72465b2ba468

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#46217
No description provided.