Fix T46217: Make normal artifacts